[package]
name = "ping-protocol-core"
description = "Very simple package for reading ping protocol data."
authors = ["Yiğit Özdemir <yigitozdemir1299@gmail.com>, Patrick José Pereira <patrickelectric@gmail.com>, Raul Victor Trombin <raulvtrombin@gmail.com>"]
version = "0.1.0"
edition = "2021"

[dependencies]
bytemuck = { version = "1.20.0", features = ["derive"] }
byteorder = { version = "1.5.0", default-features = false }
cfg-if = "1.0.0"
embedded-io = "0.6.1"
embedded-io-async = "0.6.1"
num-traits = "0.2.19"
smallvec = "1.13.2"
